--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttonList{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 70px;
+  margin-bottom: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.button{
+  cursor: pointer;
+  border-radius: 15px;
+  margin: 10px;
+  background-color:burlywood;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttonImg{
+  width: 150px;
+  height: auto;
+}
+
+.boxList{
+ display: flex;
+ flex-direction: row;
+ width: 1500px;
+ justify-content:space-around ;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: cornsilk;
+}
+
+.result{
+  font-size: 65px;
+  font-weight: bold;
+  margin-bottom: 100px;
 }
